--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ code {
 
 .custom-scrollbar::-webkit-scrollbar-track {
   background: #f1f1f1;
+  margin: 8px;
 }
 
 .dm-sans-regular {
@@ -60,3 +61,18 @@ code {
   font-family: "DM Sans", sans-serif;
   font-weight: 500;
 }
+
+/* In your CSS file */
+.dashed-border-big {
+  border: 1px dashed transparent;
+  background-image: linear-gradient(to right, currentColor 10px, transparent 5px),
+                    linear-gradient(to left, currentColor 10px, transparent 5px),
+                    linear-gradient(to top, currentColor 10px, transparent 5px),
+                    linear-gradient(to bottom, currentColor 10px, transparent 5px);
+  background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
+  background-size: 15px 1px, 15px 1px, 1px 15px, 1px 15px;
+  background-position: top, bottom, left, right;
+}
+
+
+
